# classifier

./: README.md  app.py  classifier.py  image_classifier.h5  karas.py  pyproject.toml  requirements.txt  runtime.txt  train_cifar10.py
.github/workflows/: ci.yml
templates/: index.html  layout.html  result.html
tests/: test_app.py  test_keras.py
